k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-flask-app
  labels:
    app: simple-flask-app
spec:
  type: ClusterIP
  selector:
    app: simple-flask-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
